--- a/s/seva3125.github.io.css
+++ b/s/seva3125.github.io.css
@@ -5,3 +5,11 @@ color: deepskyblue;
 
 
 }
+#title {
+    src: url(https://raw.githubusercontent.com/seva3125/seva3125.github.io/master/s/fonts/SF-Pro-Display-Light.otf)format(otf);
+    font-family: SF-Pro-Display-Light;
+
+
+
+
+}
